--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url(/image/background.png) 100% 100%;
+    background: url(/img/background.png) 100% 100%;
     background-size: cover;
 }
 
